# discord-whisper-gpt-summarization

./: Dockerfile  Dockerfile.development  README.md  docker-compose.development.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
discord_whisper_summarize/: discord_lib.py  open_ai_lib.py
