[tool.poetry]
name = "discord-whisper-summarize"
version = "0.1.0"
description = ""
authors = ["TOSUKUi <am.businessmail.exp@gmail.com>"]
readme = "README.md"
packages = [{include = "discord_whisper_summarize"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
py-cord = {extras = ["voice"], version = "^2.4.1"}
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
